fixed navbar and updated scrollbar styles

--- a/src/styles/Home.css
+++ b/src/styles/Home.css
@@ -10,6 +10,10 @@
     padding-right: 20px;
 }
 
+.heading h3 {
+    margin: 0;
+}
+
 @media(900px <=width <=1300px) {
     .results {
         grid-template-columns: repeat(3, 1fr);
